Ajuste de estrutura

--- a/src/app/pesquisa-usuario/pesquisa-usuario.component.html
+++ b/src/app/pesquisa-usuario/pesquisa-usuario.component.html
@@ -29,7 +29,10 @@
 
         <button type="submit" class="btn">Pesquisar</button>
 
-    </form>
-
-       
+    </form>       
 </section>
+
+<section>
+    <h3></h3>
+</section>
+
