--- a/src/app/pesquisa-usuario/pesquisa-usuario.component.scss
+++ b/src/app/pesquisa-usuario/pesquisa-usuario.component.scss
@@ -9,3 +9,43 @@
 label{
     margin-left: 5px;
 }
+
+.formulario{
+    width: 50%;    
+    margin-top: 50px;
+    background-color: #e8dc81d4;
+    border-radius: 20px;
+    padding: 20px;
+    border: #6e5631 solid 2px;
+}
+
+.botao{
+    background-color: #6e5631;
+    color: #ffffff;
+    margin-top: 30px;
+    font-size: 1.1rem;
+    width: 150px;
+}
+
+.box__users{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center; 
+    margin-top: 30px;       
+}
+
+.box__users-card{
+    border: #6e5631 dashed 2px;
+    padding: 20px;
+    margin-top: 10px;
+    width: 300px;
+    height: 370px;
+    border-radius: 10px;    
+}
+
+.user__image{
+    border: #6e5631 solid 1px;
+    border-radius: 40px;
+    width: 100px;
+}
