Transforma objeto em array

--- a/src/app/pesquisa-usuario/pesquisa-usuario.component.html
+++ b/src/app/pesquisa-usuario/pesquisa-usuario.component.html
@@ -32,7 +32,7 @@
     </form>       
 </section>
 
-<section class="box__users">
+<section [ngClass]="escondeSection ? 'hidden' : 'show'" class="box__users">
     <div class="box__users-card" *ngFor="let item of listaUsuarios">
         <img class="user__image" src="{{item.picture.medium}}" alt="Imagem do Usuário">
         <h3>Nome: {{item.name.title}} {{item.name.first}} {{item.name.last}}</h3>
