--- a/src/app/pesquisa-usuario/pesquisa-usuario.component.scss
+++ b/src/app/pesquisa-usuario/pesquisa-usuario.component.scss
@@ -50,10 +50,10 @@ label{
     width: 100px;
 }
 
-.hidden{
-    display: none;
-}
+// .hidden{
+//     display: none;
+// }
 
-.show{
-    visibility: reset;
-}
+// .show{
+//     visibility: reset;
+// }
