--- a/src/app/pesquisa-usuario/pesquisa-usuario.component.html
+++ b/src/app/pesquisa-usuario/pesquisa-usuario.component.html
@@ -32,7 +32,7 @@
 
         </div>
 
-        <button type="submit" class="btn button__dados" (reset)="resetarForm()">Pesquisar</button>
+        <button type="submit" class="btn button__dados">Pesquisar</button>
 
     </form>
 
